package com.eslirodrigues.simpletasktodo.util

object Constants {

    const val PREF_NAME = "PREF_NAME"

    const val CHECKBOX_DELETE_KEY = "CHECKBOX_DELETE_KEY"

    const val FAB_TODO_TAG = "FAB_TODO_TAG"
    const val TEXT_FIELD_ADD_TAG = "TEXT_FIELD_ADD_TAG"
    const val ALERT_UPDATE_TEXT_FIELD = "ALERT_UPDATE_TEXT_FIELD"
    const val ALERT_UPDATE_CONFIRM = "ALERT_UPDATE_CONFIRM"
    const val TODO_UPDATE_ITEM = "TODO_UPDATE_ITEM"
    const val CHECKBOX_ITEM = "CHECKBOX_ITEM"
    const val ICON_DELETE = "ICON_DELETE"
}